--- a/index.html
+++ b/index.html
@@ -309,7 +309,10 @@ blockquote.speech {
   
   
 </div>
-
+</div>
+<div id="warning-message">
+    Please rotate your device's screen to landscape mode and refresh the page to view this site.
+</div>
 <script>
 //add Mapbox tilelayers
       var sat = L.tileLayer('https://api.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token={accessToken}', {
