--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ body {
   border: none;
   position: absolute;
   z-index: 1;
-  bottom: 15px;
+  top: 5px;
   right: 25px;
 }
 
@@ -117,7 +117,7 @@ body {
       #map {
         resize: horizontal;
         width: 95%;
-        height: calc(77vh - 12px);
+        height: calc(90vh - 12px);
         border: 3px solid #FDD023;
         margin-left: 2.5%;
         margin-right: 2.5%;
@@ -240,7 +240,7 @@ blockquote.speech {
 <body>
 
   	<div id="wrapper">
-    <button class="openbtn" onclick="openNav()"><u>Ask Rev!</u></button>
+    
         	
 <div id="mySidebar" class="sidebar">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a><br><br>
@@ -307,7 +307,7 @@ blockquote.speech {
   <!--add div for map -->
     		<div id="map"></div>
   
-  
+  <button class="openbtn" onclick="openNav()"><u>Ask Rev!</u></button>
 </div>
 </div>
 <div id="warning-message">
