--- a/index.html
+++ b/index.html
@@ -48,13 +48,14 @@ body {
   font-size: 20px;
   cursor: pointer;
   background-color: #FDD023;
-  color: white;
+  color: #461D7C;
   padding: 10px 15px;
   border: none;
   position: absolute;
   z-index: 1;
   top: 5px;
   right: 25px;
+  border-radius: 12px;
 }
 
 #main {
@@ -307,7 +308,7 @@ blockquote.speech {
   <!--add div for map -->
     		<div id="map"></div>
   
-  <button class="openbtn" onclick="openNav()"><u>Ask Rev!</u></button>
+  <button class="openbtn" onclick="openNav()"><u><b>Ask Rev!</b></u></button>
 </div>
 </div>
 <div id="warning-message">
