--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@ blockquote.speech {
   <blockquote id="locator" class="speech bubble">What can I help you find?</blockquote>
 </section>
 
-	  <img src = "Rev.svg" alt = "Rev giving a thumbs up" id="rev">
+	  <img src = "fullRev.svg" alt = "Rev giving a thumbs up" id="rev">
 </div>
 
 <div id="main">
