--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
       body {
         font-family: "Roboto";
       }
+      img {
+        display: block;
+        max-width: 15%;
+        height: auto;
+        margin-left: 5%;
+        margin-right: auto;
+      }
 
       #main {
         transition: margin-right .5s;
